--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@react-oauth/google": "^0.13.4",
     "gapi-script": "^1.2.0",
+    "lucide-react": "^0.562.0",
     "mongo-db": "^1.0.2",
     "mongodb": "^7.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
