--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@react-oauth/google": "^0.13.4",
     "gapi-script": "^1.2.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "mongo-db": "^1.0.2",
     "mongodb": "^7.0.0",
